Perbaikan API dan beberapafitur yang di perbaiki dan ditambahkan
